force-app/main/default/objects/Product2/fields/Update_Record__c.field-meta.xml
<CustomField>
    <fullName>Update_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Record</label>
    <type>Checkbox</type>
</CustomField>