force-app/main/default/objects/Product2/fields/X18_digit_product_Id__c.field-meta.xml
<CustomField>
    <fullName>X18_digit_product_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 digit product Id</label>
    <type>Text</type>
</CustomField>