force-app/main/default/objects/Product2/fields/X2nd_Level_support_email__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Level_support_email__c</fullName>
    <label>2nd Level support email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>