force-app/main/default/objects/Product2/fields/Zinc_support_HL_Bot_address__c.field-meta.xml
<CustomField>
    <fullName>Zinc_support_HL_Bot_address__c</fullName>
    <inlineHelpText>The unique zinc hotline address for the intended product line based hotline</inlineHelpText>
    <label>Zinc support HL Bot address</label>
    <type>Email</type>
</CustomField>